# speedire-example

./: .gitignore  .tool-versions  Dockerfile  pyproject.toml
k8s/: deployment.yaml
pipeline/: Cargo.toml
pipeline/src/: main.rs
speedireexample/: __main__.py  main.py
tests/: test_hello.py
